--- a/src/GUI/Player/GUI_Player.ui
+++ b/src/GUI/Player/GUI_Player.ui
@@ -62,14 +62,23 @@
         <enum>QFrame::Raised</enum>
        </property>
        <layout class="QGridLayout" name="gridLayout">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <property name="horizontalSpacing">
          <number>5</number>
         </property>
         <property name="verticalSpacing">
          <number>2</number>
-        </property>
-        <property name="margin">
-         <number>0</number>
         </property>
         <item row="2" column="2">
          <widget class="QPushButton" name="btn_stop">
@@ -118,33 +127,13 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QWidget" name="plugin_widget" native="true">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>1654887</height>
-             </size>
-            </property>
+           <widget class="GUI_PlayerPlugin" name="plugin_widget" native="true">
             <property name="focusPolicy">
              <enum>Qt::ClickFocus</enum>
             </property>
             <property name="styleSheet">
              <string notr="true"/>
             </property>
-            <layout class="QGridLayout" name="gridLayout_2">
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <property name="bottomMargin">
-              <number>0</number>
-             </property>
-            </layout>
            </widget>
           </item>
           <item>
@@ -884,7 +873,16 @@
              <number>0</number>
             </property>
             <layout class="QGridLayout" name="gridLayout_6">
-             <property name="margin">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
               <number>0</number>
              </property>
              <property name="spacing">
@@ -1047,7 +1045,7 @@
      <x>0</x>
      <y>0</y>
      <width>1038</width>
-     <height>25</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFle">
@@ -1246,6 +1244,12 @@
    <class>GUI_Playlist</class>
    <extends>QWidget</extends>
    <header>GUI/Playlist/GUI_Playlist.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>GUI_PlayerPlugin</class>
+   <extends>QWidget</extends>
+   <header>GUI/PlayerPlugins/GUI_PlayerPlugin.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
