--- a/src/GUI/PlayerPlugins/Engine/GUI_LevelPainter.ui
+++ b/src/GUI/PlayerPlugins/Engine/GUI_LevelPainter.ui
@@ -6,23 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>340</width>
-    <height>40</height>
+    <width>432</width>
+    <height>16</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>0</width>
-    <height>40</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>16777215</width>
-    <height>40</height>
-   </size>
-  </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>5</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>5</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item row="0" column="0">
     <widget class="QLabel" name="lab">
      <property name="styleSheet">
