--- a/src/GUI/PlayerPlugins/Equalizer/GUI_Equalizer.ui
+++ b/src/GUI/PlayerPlugins/Equalizer/GUI_Equalizer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>308</width>
-    <height>140</height>
+    <width>474</width>
+    <height>326</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -60,9 +60,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_9">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="layoutDirection">
         <enum>Qt::LeftToRight</enum>
        </property>
@@ -131,9 +128,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_3">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -199,9 +193,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_0">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -267,9 +258,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_2">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -335,9 +323,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_7">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -450,9 +435,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_5">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -518,9 +500,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_6">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -586,9 +565,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_1">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="pageStep">
         <number>1</number>
        </property>
@@ -657,9 +633,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_4">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -725,9 +698,6 @@
      </item>
      <item>
       <widget class="EqSlider" name="sli_8">
-       <property name="focusPolicy">
-        <enum>Qt::ClickFocus</enum>
-       </property>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -822,6 +792,40 @@
    <header>GUI/PlayerPlugins/Equalizer/EqSlider.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>btn_tool</tabstop>
+  <tabstop>sli_0</tabstop>
+  <tabstop>sli_1</tabstop>
+  <tabstop>sli_2</tabstop>
+  <tabstop>sli_3</tabstop>
+  <tabstop>sli_4</tabstop>
+  <tabstop>sli_5</tabstop>
+  <tabstop>sli_6</tabstop>
+  <tabstop>sli_7</tabstop>
+  <tabstop>sli_8</tabstop>
+  <tabstop>sli_9</tabstop>
+  <tabstop>cb_gauss</tabstop>
+  <tabstop>label_10</tabstop>
+  <tabstop>label_18</tabstop>
+  <tabstop>label_20</tabstop>
+  <tabstop>label_6</tabstop>
+  <tabstop>label_14</tabstop>
+  <tabstop>label_16</tabstop>
+  <tabstop>label_7</tabstop>
+  <tabstop>label</tabstop>
+  <tabstop>label_17</tabstop>
+  <tabstop>label_2</tabstop>
+  <tabstop>label_3</tabstop>
+  <tabstop>label_12</tabstop>
+  <tabstop>label_5</tabstop>
+  <tabstop>label_4</tabstop>
+  <tabstop>label_15</tabstop>
+  <tabstop>label_9</tabstop>
+  <tabstop>label_19</tabstop>
+  <tabstop>label_13</tabstop>
+  <tabstop>label_11</tabstop>
+  <tabstop>label_8</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
