--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -629,8 +629,9 @@ QSpinBox:disabled {
 }
 
 
-
-QSlider:hover {
+QSlider:hover,
+QSlider:focus
+{
 	background: rgba(128, 128, 128, 40);
 	border-radius: 4px;
 }
