--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -815,6 +815,20 @@ QProgressBar::chunk {
 	margin: 0.5px;
 }
 
+QProgressBar#playlist_progress{
+	border: 1px solid #202020;
+	background: #282828;
+	color: transparent;
+	padding-top: 2px;
+	padding-bottom: 2px;
+}
+
+QProgressBar#playlist_progress::chunk
+{
+	width: 8px;
+	background: #e8841a; 
+	margin: 0;
+}
 
 QPushButton#btn_stop,
 QPushButton#btn_fw,
