--- a/src/GUI/Playlist/BottomBar/GUI_PlaylistBottomBar.ui
+++ b/src/GUI/Playlist/BottomBar/GUI_PlaylistBottomBar.ui
@@ -300,6 +300,44 @@
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="btn_crossfade">
+     <property name="minimumSize">
+      <size>
+       <width>28</width>
+       <height>28</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>28</width>
+       <height>28</height>
+      </size>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="toolTip">
+      <string>Crossfader</string>
+     </property>
+     <property name="text">
+      <string notr="true"/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../Resources/Icons.qrc">
+       <normaloff>:/Icons/crossfade.svg.png</normaloff>:/Icons/crossfade.svg.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
