--- a/src/GUI/Resources/Icons.qrc
+++ b/src/GUI/Resources/Icons.qrc
@@ -85,5 +85,6 @@
         <file>Icons/star.png</file>
         <file>Icons/star_disabled.png</file>
         <file>Icons/waiting.gif</file>
+        <file>Icons/crossfade.svg.png</file>
     </qresource>
 </RCC>
