--- a/src/GUI/TagEdit/GUI_TagEdit.ui
+++ b/src/GUI/TagEdit/GUI_TagEdit.ui
@@ -39,7 +39,11 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QSpinBox" name="sb_track_num"/>
+         <widget class="QSpinBox" name="sb_track_num">
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
         </item>
         <item row="1" column="1">
          <widget class="QSpinBox" name="sb_year">
