--- a/src/GUI/Covers/GUI_AlternativeCovers.ui
+++ b/src/GUI/Covers/GUI_AlternativeCovers.ui
@@ -98,6 +98,9 @@
      <property name="verticalScrollBarPolicy">
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
      <property name="tabKeyNavigation">
       <bool>false</bool>
      </property>
