--- a/src/GUI/Plugins/Speed/GUI_Speed.ui
+++ b/src/GUI/Plugins/Speed/GUI_Speed.ui
@@ -64,7 +64,7 @@
        <item row="1" column="2">
         <widget class="QPushButton" name="btn_revert_speed">
          <property name="text">
-          <string>Revert</string>
+          <string>Default</string>
          </property>
         </widget>
        </item>
@@ -148,7 +148,7 @@
        <item row="0" column="2">
         <widget class="QPushButton" name="btn_revert_pitch">
          <property name="text">
-          <string>Revert</string>
+          <string>Default</string>
          </property>
         </widget>
        </item>
