--- a/src/GUI/Preferences/PlayerPreferences/GUI_PlayerPreferences.ui
+++ b/src/GUI/Preferences/PlayerPreferences/GUI_PlayerPreferences.ui
@@ -7,28 +7,35 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>131</height>
+    <height>115</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="0">
+   <item row="4" column="0">
     <widget class="QCheckBox" name="cb_update_notifications">
      <property name="text">
       <string>Update notifications</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
+   <item row="1" column="0">
     <widget class="QCheckBox" name="cb_start_in_tray">
      <property name="text">
       <string>Start in tray</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="3" column="0">
     <widget class="QCheckBox" name="cb_close_to_tray">
      <property name="text">
       <string>Close to tray</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QCheckBox" name="cb_show_tray_icon">
+     <property name="text">
+      <string>Show system tray icon</string>
      </property>
     </widget>
    </item>
